refactor(entities): rename the interfaces folder to entities and reconfigure aliases

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -39,8 +39,8 @@
       "@assets/*": [
         "assets/*"
       ],
-      "@interfaces/*": [
-        "interfaces/*"
+      "@entities/*": [
+        "entities/*"
       ],
       "@store/*": [
         "store/*"
