--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.4.1",
     "@hookform/resolvers": "^5.1.1",
     "@reduxjs/toolkit": "^2.7.0",
+    "axios": "^1.11.0",
     "html-react-parser": "^5.2.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
